# Lightsheet_microscopy_image_3D_nuclei_instance_segmentation

./: .dockerignore  .gitignore  .gitmodules  CNAME  PR_BODY.md  README.md  analysis_nis_shape.py  batch_cmd_get_pa.sh  batch_cmd_get_pa1.sh  batch_cmd_get_pa2.sh  batch_cmd_get_pa3.sh  batch_cmd_get_pa_p4.sh  batch_cmd_get_pa_p4_1.sh  batch_cmd_get_pa_p4_2.sh  batch_cmd_get_pa_p4_3.sh  batch_cmd_get_pa_p4_4.sh  batch_cmd_get_pa_p4_5.sh  batch_cmd_get_pa_remain.sh  batch_cmd_get_pa_remain2.sh  batch_cmd_submit_pa.sh  brain_render.ipynb  brain_render.py  brainmap_nogui.py  cmd_get_pa.sh  coloc_fgmask_to_label.py  coord_to_bbox.py  gen_brain_map.py  journal_figs.ipynb  main.nf  make_batch_cmd_pa.py  make_batch_cmd_pa_p4.py  make_cmd_nis_p14.ipynb  nextflow.config  nis_coloc.py  nis_shape_featuremap.py  nis_viewer.py  p4_mask_bg_out.py  plot_fig1.py  plot_ptreg_stitch_param.py  postproc_nis_shape.py  (+9 more)
assets/: samplesheet.csv
cell_coloc/: Untitled.ipynb  coloc.py
coloc/: README.md  annotation_gui_cmd.sh  coloc_classifier-multiclassBboxLoc_inferNIS.py  coloc_classifier_dataset.py  coloc_classifier_multiclassBboxLocBalsam_trainval.py  coloc_trainval_infer_cmd.sh  (+4 more)
cpp/: CMakeLists.txt  CMakeLists.txt.backup  README.md  build.sh  build_main.sh  build_main_hummer.sh  flow_op.cpp  flow_op.h  gnn_stitch_gap.cpp  gnn_stitch_gap.h  h5_writer.cpp  h5_writer.h  image_reader.cpp  image_reader.h  loop_unet.cpp  loop_unet.h  main.cpp  test.cpp  test.cpp.backup  torchist.cpp  torchist.h  utils.cpp  utils.h
cpp/build_main/: CMakeCache.txt  Makefile  cmake_install.cmake  main
(+416 files in other folders)
